--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -97,28 +97,32 @@
 					<section  class="wrapper style1">
 						<div class="inner">
 							<h2>Design for Motivation & Behavior Change</h2>
-							<span class="image titleimg"><img src="designingasystem.png" alt=""/></span>
-
 							<p>Using notes from Discovery, we conducted a <b><a href="https://www.researchgate.net/publication/51070630_The_Behaviour_Change_Wheel_a_new_method_for_characterising_and_designing_behaviour_change_interventions">behavioral analysis</a></b> to examine barriers and opportunities to motivate coaches to take action and maximize value from our product.</p>
+							<span class="image"><img src="comb.png" alt=""/></span>
+
 																 <table>
 																	 <tbody>
 																		 <tr>
-																			 <td><b>PSYCHOLOGICAL CAPABILITY</b></td>
-																			 <td>Coaches lacked information on how to facilitate habit formation in clients. This reduced their confidence in helping clients with behavior change.</td>
+																			 <td style="background-color: #e0402b;"><b>PSYCHOLOGICAL CAPABILITY</b></td>
+																			 <td>Coaches lacked knowledge on facilitating habit formation with groups of clients.</td>
 																		 </tr>
 																		 <tr>
-																			 <td><b>REFLECTIVE MOTIVATION</b></td>
-																			 <td>Coaches needed to believe in the value of the Habitry iOS app in order to use it to promote habit formation with clients.</td>
+																			 <td style="background-color: #e0402b;"><b>PHYSICAL CAPABILITY</b></td>
+																			 <td>Not applicable.</td>
 																		 </tr>
 																		 <tr>
-																			 <td><b>AUTOMATIC MOTIVATION</b></td>
+																			 <td style="background-color: #f88432;"><b>REFLECTIVE MOTIVATION</b></td>
+																			 <td>Coaches needed to believe in the value of the Habitry iOS app to use it.</td>
+																		 </tr>
+																		 <tr>
+																			 <td style="background-color: #f88432;"><b>AUTOMATIC MOTIVATION</b></td>
 																			 <td>Coaches needed to experience success in each session with the app to keep using it.</td>
 																		 </tr>
 																		 <tr>
-																			 <td><b>PHYSICAL OPPORTUNITY</b></td>
+																			 <td style="background-color: #00b342;"><b>PHYSICAL OPPORTUNITY</b></td>
 																			 <td>Coaches needed enough time in their daily schedule to launch and maintain clients groups on Habitry iOS.</td>
 																		 </tr>
-																		 <td><b>SOCIAL OPPORTUNITY</b></td>
+																		 <td style="background-color: #00b342;"><b>SOCIAL OPPORTUNITY</b></td>
 																		 <td>Coaches needed a community of peers to support their motivation to keep using the Habitry iOS app.</td>
 																	 </tr>
 																	 </tbody>
@@ -131,6 +135,7 @@
 						<div style="background-color: #b74e91;" class="box">
 							<h2>Design Tactics</h2>
 							<p>We aimed to increase Capability, Motivation, and Opportunity by selecting appropriate <b><a href="https://www.researchgate.net/publication/236064731_The_Behavior_Change_Technique_Taxonomy_v1_of_93_Hierarchically_Clustered_Techniques_Building_an_International_Consensus_for_the_Reporting_of_Behavior_Change_Interventions">Behavior Change Techniques</a>.</b></p>
+							<span class="image"><img src="designingasystem.png" alt=""/></span>
 
 						</div>
 					</section>
@@ -214,7 +219,7 @@
 					</section>
 
       <!-- Footer -->
-  			<footer id="footer" class="wrapper style1">
+  			<footer id="footer" class="wrapper style-alt">
   				<div class="inner">
   					<ul class="menu">
   						<li>Omar Ganai lives in Toronto, Canada. <img src="../../images/canada.png" width="22px" height="11px"></li>
