--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -190,11 +190,13 @@
 						<div class="row">
 									<!-- Text -->
 										<div class="4u">
-											<h2>The Product</h2>
+										 <iframe width="300px" height="169px" src="https://www.youtube.com/embed/qxDGcA4vSX4?showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 										</div>
-									 <div class="8u$ videoWrapper">
+									 <div class="8u$">
+										 <h2>The Product</h2>
+
 										 <p>With 19 Motivate Summits in 18 months and some user testing tools, we were able to watch users interact with our product and refine it.</p>
-										 <iframe width="800px" height="450px" src="https://www.youtube.com/embed/qxDGcA4vSX4?showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
 									 </div>
 						</div>
 
@@ -206,11 +208,12 @@
 						<div class="row">
 									<!-- Text -->
 										<div class="4u">
-											<h2>Results</h2>
+										 	<iframe width="300px" height="169px" src="https://www.youtube.com/embed/MK0PZ2uAd9E" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 										</div>
-									 <div class="8u$ videoWrapper">
+									 <div class="8u$">
+											<h2>Results</h2>
 										 <p>At it's peak, Habitry iOS had more than 1,000 users on the platform. Health coaches were making an average of $3,000 per month on the app and clients were checking in with 72% daily adherence and 68% stuck around for a full 365 days.</p>
-										 <iframe width="800px" height="450px" src="https://www.youtube.com/embed/MK0PZ2uAd9E" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
 
 									 </div>
 						</div>
