--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -195,7 +195,7 @@
 									 <div class="8u$">
 										 <p>With 19 Motivate Summits in 18 months and some user testing tools, we were able to watch users interact with our product and refine it. Here is a video of our first public release.</p>
 
-										 <a href="https://www.youtube.com/watch?v=qxDGcA4vSX4"><span class="image titleimg"><img src="video1.jpg" width=alt=""/></span></a>
+										 <a href="https://www.youtube.com/watch?v=qxDGcA4vSX4"><span class="image titleimg fit"><img src="video1.jpg" width=alt=""/></span></a>
 
 									 </div>
 						</div>
@@ -213,7 +213,7 @@
 									 <div class="8u$">
 										 <p>At it's peak, Habitry iOS had more than 1,000 users on the platform. Health coaches were making an average of $3,000 per month on the app and clients were checking in with 72% daily adherence and 68% stuck around for a full 365 days.</p>
 
-										 <a href="https://www.youtube.com/watch?v=MK0PZ2uAd9E"><span class="image titleimg"><img src="video2.jpg" width=alt=""/></span></a>
+										 <a href="https://www.youtube.com/watch?v=MK0PZ2uAd9E"><span class="image titleimg fit"><img src="video2.jpg" width=alt=""/></span></a>
 
 
 									 </div>
